Updated code (5/6/2024)