@@ -29,11 +29,11 @@ public class UserController {
 
     @GetMapping(path = "/all")
     public ResponseData getAllUsers() {
-        List<UserDTO> userDTOList = userService.getAllStudents().stream().map(UserConverter::toDTO).collect(Collectors.toList());
+        List<UserDTO> userDTOList = userService.getAllUsers().stream().map(UserConverter::toDTO).toList();
         ResponseData responseData = new ResponseData();
         responseData.setStatus(200);
         responseData.setMessage("Get all users successfully");
-        responseData.setDataList(Collections.singletonList(userDTOList));
+        responseData.setData(Collections.singletonList(userDTOList));
         return responseData;
     }
 
@@ -46,30 +46,11 @@ public class UserController {
             responseData.setMessage("Get user successfully");
             responseData.setData(UserConverter.toDTO(user));
         } else {
-            responseData.setStatus(500);
+            responseData.setStatus(300);
             responseData.setMessage("The username "+ username + " doesn't exists!");
         }
 
         return  responseData;
-    }
-
-    @PostMapping(path = "/account")
-    @ResponseBody
-    public ResponseData addAccount(@RequestParam String username,
-                                   @RequestParam String password,
-                                   @RequestParam String phoneNumber) {
-        boolean isSuccess = userService.addUser(username, password, phoneNumber);
-        ResponseData responseData = new ResponseData();
-
-        if(isSuccess) {
-            responseData.setStatus(200);
-            responseData.setMessage("Added account successfully");
-        } else {
-            responseData.setStatus(500);
-            responseData.setMessage("The username "+ username + " does exists!");
-        }
-
-        return responseData;
     }
 
     @PutMapping(path = "/{username}")
@@ -82,7 +63,7 @@ public class UserController {
             responseData.setStatus(200);
             responseData.setMessage("Updated user successfully");
         } else {
-            responseData.setStatus(500);
+            responseData.setStatus(300);
             responseData.setMessage("The username " + user.getUsername() + " does not exists!");
         }
 
@@ -99,49 +80,8 @@ public class UserController {
             responseData.setStatus(200);
             responseData.setMessage("Deleted user successfully");
         } else {
-            responseData.setStatus(500);
+            responseData.setStatus(300);
             responseData.setMessage("The username " + username + " does not exists!");
-        }
-
-        return responseData;
-    }
-
-    @PostMapping(path = "/sign-in")
-    @ResponseBody
-    public ResponseData signIn(
-            @RequestParam String username,
-            @RequestParam String password) {
-        boolean isSuccess = userService.signIn(username, password);
-
-        ResponseData responseData = new ResponseData();
-        if (isSuccess) {
-            responseData.setStatus(200);
-            responseData.setMessage("Sign in successfully");
-        }
-        else {
-            responseData.setStatus(500);
-            responseData.setMessage("Wrong username or password!");
-        }
-
-        return responseData;
-    }
-
-    @PutMapping(path = "/account")
-    @ResponseBody
-    public ResponseData resetPassword(
-            @RequestParam String username,
-            @RequestParam String password,
-            @RequestParam String phoneNumber) {
-        boolean isSuccess = userService.resetPassword(username, password, phoneNumber);
-
-        ResponseData responseData = new ResponseData();
-        if (isSuccess) {
-            responseData.setStatus(200);
-            responseData.setMessage("Reset password successfully!");
-        }
-        else {
-            responseData.setStatus(500);
-            responseData.setMessage("Username or phone number is wrong!");
         }
 
         return responseData;
@@ -153,11 +93,11 @@ public class UserController {
         List<Object> testedAssignment = userService.getTestByUsername(username);
         if (testedAssignment != null) {
             responseData.setStatus(200);
-            responseData.setMessage("Get user successfully");
-            responseData.setDataList(testedAssignment);
+            responseData.setMessage("Get tested assignment of User successfully");
+            responseData.setData(testedAssignment);
         } else {
-            responseData.setStatus(500);
-            responseData.setMessage("The tested assignment of "+ username + " doesn't exists!");
+            responseData.setStatus(300);
+            responseData.setMessage("The username "+ username + " doesn't exists!");
         }
 
         return  responseData;
@@ -169,11 +109,11 @@ public class UserController {
         List<Object> statistic = userService.getStatistic(username);
         if (statistic != null) {
             responseData.setStatus(200);
-            responseData.setMessage("Get user successfully");
-            responseData.setDataList(statistic);
+            responseData.setMessage("Get statistic of User successfully");
+            responseData.setData(statistic);
         } else {
-            responseData.setStatus(500);
-            responseData.setMessage("The tested assignment of "+ username + " doesn't exists!");
+            responseData.setStatus(300);
+            responseData.setMessage("The username "+ username + " doesn't exists!");
         }
 
         return  responseData;
@@ -185,8 +125,8 @@ public class UserController {
         List<Object> statistic = userService.getTopicSetStatistic(topic_set_code);
         if (statistic != null) {
             responseData.setStatus(200);
-            responseData.setMessage("Get user successfully");
-            responseData.setDataList(statistic);
+            responseData.setMessage("Get statistic of topic set successfully");
+            responseData.setData(statistic);
         } else {
             responseData.setStatus(500);
             responseData.setMessage("The topic set of "+ topic_set_code + " doesn't exists!");
@@ -194,6 +134,7 @@ public class UserController {
 
         return  responseData;
     }
+//    OKE
 
 //    Trieu
     @GetMapping("{username}/friends")
